# sca_on_kyber_lcc

./: README.md
belief_propagation_solver_from_roulette/: solver.py  test_bp_solver.py
data/confusion_matrices/: conf_matrix_0_acc_0.3708_opt.csv  conf_matrix_1_acc_0.97036_o0.csv  conf_matrix_2_acc_0.74092_o3.csv  optimized_unbalanced.csv  reference_balanced.csv
data/gaussian_confusion_matrices/: gen.py  scale_0.10.csv  scale_0.20.csv  scale_0.30.csv  scale_0.40.csv  scale_0.50.csv  scale_0.60.csv  scale_0.70.csv  scale_0.80.csv  scale_0.90.csv  scale_1.00.csv  scale_1.10.csv  scale_1.20.csv  scale_1.30.csv  scale_1.40.csv  scale_1.50.csv  scale_1.60.csv  scale_1.70.csv  scale_1.80.csv  scale_1.90.csv  scale_2.00.csv
experiment_scripts/: find_best_spread_cmds.sh  find_number_of_ciphertexts_needed.sh  find_number_of_ciphertexts_needed_masked.sh
experiment_scripts/gens/: find_number_of_ciphertexts_needed_bp.py  find_number_of_ciphertexts_needed_masked.py
kyber_sca_simulation/: .gitignore  CMakeLists.txt  bias_matrices.h  build_bias_matrices.c  find_n_ciphertexts_needed_to_attack.c  kyber_sca_full_attack.c  kyber_sca_full_attack_grid.c  kyber_sca_generate_inequalities.c  kyber_sca_solve_inequalities.c  sca_attack_simulation.c  sca_attack_simulation.h  sca_indcpa.c  solver.c  solver.h
kyber_sca_simulation/kyber768/: kem.c
plotters/: plots.py
results/n_ciphertexts_needed/: n_ciphertexts_masked.csv  n_ciphertexts_needed.csv  n_ciphertexts_shuffled.csv
results/n_ciphertexts_needed/raw/: merged_n_ciphertexts_belief_propagation.csv  merged_tmp_n_ciphertexts.csv  merged_tmp_n_ciphertexts_masked.csv
